Updated pom.xml: - Added missing maven dependencies - Added jacoco and ran code coverage - Conducted mutation testing through pitest